<?xml version="1.0"?>
<package format="2">
  <name>rcvio</name>
  <version>0.0.0</version>
  <description>Robot centric visual-inertial odometry</description>

  <author email="sufalroy1997@gmail.com">Sufal Roy</author>

  <maintainer email="sufalroy1997@gmail.com">Sufal Roy</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>eigen_conversions</depend>

</package>
